hphp/hack/test/typecheck/stricter_consts/conflict_3.bad.php.exp
File "conflict_3.bad.php", line 12, characters 7-7:
Constant X is defined concretely in multiple ancestors (Typing[4374])
  File "conflict_3.bad.php", line 4, characters 13-13:
  One conflicting definition is here
  File "conflict_3.bad.php", line 7, characters 13-13:
  Another conflicting definition is here
  File "conflict_3.bad.php", line 10, characters 13-13:
  Another conflicting definition is here
File "conflict_3.bad.php", line 13, characters 7-8:
Some members in class `C` are incompatible with those declared in type `T1` (Typing[4374])
  File "conflict_3.bad.php", line 10, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "conflict_3.bad.php", line 4, characters 13-13:
  `X` inherited from `T1`
  File "conflict_3.bad.php", line 10, characters 13-13:
  conflicts with constant `X` inherited from `T3`.
File "conflict_3.bad.php", line 13, characters 11-12:
Some members in class `C` are incompatible with those declared in type `T2` (Typing[4374])
  File "conflict_3.bad.php", line 10, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "conflict_3.bad.php", line 7, characters 13-13:
  `X` inherited from `T2`
  File "conflict_3.bad.php", line 10, characters 13-13:
  conflicts with constant `X` inherited from `T3`.
